# CMakeList.txt : CMake project for OrcaChallenge3, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (OrcaChallenge3 "OrcaChallenge3.cpp" "OrcaChallenge3.h" "json.hpp")

# TODO: Add tests and install targets if needed.
